<resources>
    <string name="app_name">Japanese Recognition System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="empty">You do not have any note yet</string>
    <string name="Delete">Delete</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="register_using_email">Register using email</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="general">General</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="setting">Setting</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="untitled">Untitled</string>
    <string name="title_activity_note_detail">NoteDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clear">clear</string>
    <string name="space">space</string>
    <string name="backspace">backspace</string>
    <string name="show">Show</string>
    <string name="japanese_recognition_system">JAPANESE RECOGNITION SYSTEM</string>
</resources>