<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/general">
            <menu>
                <item
                    android:title="@string/add_note"
                    android:id="@+id/addNote"
                    android:icon="@drawable/ic_add"/>
            </menu>
        </item>

        <item android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_password"
                    android:icon="@drawable/ic_password"
                    android:title="@string/change_password"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>