<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ChangePassword">

    <ImageButton
        android:id="@+id/changePasswordCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_backward_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/changePasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/changePasswordCloseButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changePasswordNewPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/new_password"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordView" />

    <TextView
        android:id="@+id/ConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_password"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewChangePasswordEditNewPassword" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardViewChangePasswordEditNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordNewPasswordView">

        <EditText
            android:id="@+id/changePassowordEditNewPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="12dp">

        </EditText>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardViewChangePasswordConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmNewPassword">

        <EditText
            android:id="@+id/changePasswordEditConfirmNewPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="12dp">

        </EditText>

    </soup.neumorphism.NeumorphCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordDoneBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_shape"
        android:text="@string/Done"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewChangePasswordConfirmNewPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>