<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.EditProfile">

    <ImageButton
        android:id="@+id/editProfileCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_backward_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editProfileView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editProfileCloseButton"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfilePicture"
        android:layout_width="154dp"
        android:layout_height="146dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="162dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfilePictureButton"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="136dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardViewEditProfileUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture" >

        <EditText
            android:id="@+id/editProfileUserName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_face"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="12dp"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="12dp">

        </EditText>

        <TextView
            android:id="@+id/editProfileUserNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/user_name" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardViewEditProfileEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEditProfileUserName">

        <TextView
            android:id="@+id/editTextEditProfileEmailAddressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editProfileEmailAddress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="12dp"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="12dp">

        </EditText>

    </soup.neumorphism.NeumorphCardView>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editProfileDoneBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_shape"
        android:text="@string/Done"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEditProfileEmailAddress" />



</androidx.constraintlayout.widget.ConstraintLayout>